# paper2data

./: .gitignore  explore_datasets.ipynb  paper2data_plan.docx  pyproject.toml
artifacts/complement_nb_tfidf_20ng/: classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/complement_nb_tfidf_20ng_tf0.01/: best_model.joblib  classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/complement_nb_tfidf_20ng_tf0.1/: best_model.joblib  classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/complement_nb_tfidf_20ng_tf0.25/: classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/linear_svm_bge_small_20ng/: best_model.joblib  classification_report.json  confusion_matrix.npy  metrics.json
artifacts/linear_svm_bge_small_20ng_n1/: best_model.joblib  classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/linear_svm_bge_small_20ng_n10/: best_model.joblib  classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/linear_svm_bge_small_20ng_n2/: best_model.joblib  classification_report.json  config.yaml  confusion_matrix.npy  metrics.json
artifacts/logreg_tfidf_20ng/: config.yaml  (+3 more)
conf/: claude_eval.yaml  config.yaml  llm_classify.yaml  train.yaml
notebooks/: claude_eval.ipynb  dashboard.ipynb  data_efficiency.ipynb  few_shot_inspection.ipynb
scripts/: claude_eval.py  llm_classify.py  precompute_fewshot.py  precompute_summaries.py  train.py
tests/: test_claude_eval.py  test_providers.py
(+346 files in other folders)
