[project]
name = "paper2data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "stefanpate", email = "stefanpate94@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "typer>=0.24.1",
    "hydra-core>=1.3",
    "pandas>=2.2",
    "seaborn>=0.13",
    "sentence-transformers>=3.0",
    "einops>=0.8",
    "ollama>=0.4",
    "pydantic>=2.8",
    "tqdm>=4.66",
]

[project.scripts]
paper2data = "paper2data.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
